# diet-wispr

./: .env-example  .gitignore  README.md  config.example.toml  config.toml  pyproject.toml
src/diet_wispr/: __init__.py  app.py  config.py  engine.py  hotkey.py  indicator.py  output.py  recorder.py  transcribe.py
