[project]
name = "diet-wispr"
version = "0.1.0"
description = "Personal voice-dictation tool: global hotkey -> mic -> OpenAI STT -> cleanup -> paste into focused window. A lean, self-hosted take on Wispr Flow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.26",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "websockets>=13",
]

[project.scripts]
diet-wispr = "diet_wispr.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diet_wispr"]
